# ad-omics

./: .gitignore  README.md  best_hyperparams.json  pyproject.toml
adomicspy/src/adomicspy/: __init__.py  notebook.py  scdata.py
configs/: __init__.py  cell_state_encoder.py  scrna_transformer.py  training.py  training_parameter_config.py
data/: __init__.py  dataloader.py  dataset.py  scdata.py  types.py
models/: cell_state_encoder.py  mlp_classifier.py  plan.md
models/lightning/: mlp_classifier.py
models/torch/: cell_state_encoder.py  feedforward.py  mlp_classifier.py  multihead_attention.py  scrna_transformer.py  transformer_classifier.py  transformer_encoder.py
models/transformer/: cell_state_encoder.py  classifier.py  scrna_transformer.py  transformer_encoder.py
notebooks/: ADOmics_Classifiers.ipynb  ADOmics_DEG.ipynb  ADOmics_initial_import.ipynb  jj_scratch.ipynb  jj_test.ipynb
results/: model_checkpoint.pkl
scripts/: hyperparameter_search.py  notebook.py  run_ML_pipeline.py  run_classifier_pipeline.py  run_preprocessing_pipeline.py  train.py  train_lightning.py
scripts/mlp/: hyperparameter_search.py  train_lightning.py
scripts/transformer/: hyperparameter_search.py
tests/: conftest.py  utils.py
tests/data/: test_dataloaders.py  test_dataset.py  test_scdata.py
tests/models/: test_cell_state_encoder.py  test_scrna_transformer.py  test_transformer_classifier.py
tools/: __init__.py  scplot.py
trainer/: trainer.py
trainer/lightning/: mlp_classifier.py
trainer/mlp/: classifier.py
trainer/transformer/: classifier.py
