[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-omics"
version = "0.1.0"
description = "Load and visualize scRNA-seq ROSMAP data up to UMAP"
authors = [
    {name = "Sarah Stankowicz", email = "sarahstankowicz@gmail.com"},
    {name = "James Stankowicz", email = "jj.stankowicz@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "nbformat>=5.10.4",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "matplotlib>=3.7.5",
    "scanpy>=1.9.8",
    "pyreadr>=0.5.3",
    "scipy>=1.10.1",
    "umap-learn>=0.5.7",
    "plotly>=6.0.1",
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "ray>=2.46.0",
]

[dependency-groups]
dev = [
    "gpustat>=1.1.1",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "mlflow>=2.22.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "lightning>=2.5.1.post0",
]


[tool.setuptools]
packages = ["data", "models", "trainer", "tools"]
